Remove some of the dependencies on JDK internal classes, use public APIs instead (#452)